# stackoverflow

./: .gitignore  docker-compose.yaml  init.sql  pom.xml  pyproject.toml
frontend/: package.json
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/components/: Category.tsx
frontend/src/pages/: categories.tsx  category.tsx
frontend/src/stores/: answers.ts  categories.ts  questions.ts  rootStore.ts  user.ts
src/main/java/dev/horobets/stackoverflow/: StackoverflowApplication.java
src/main/java/dev/horobets/stackoverflow/config/: DataInitializer.java  SecurityAuditorAware.java
src/main/java/dev/horobets/stackoverflow/model/: BaseEntity.java
src/main/java/dev/horobets/stackoverflow/repository/: AnswerRepository.java  BookmarkRepository.java  CommentRepository.java  QuestionRepository.java  RoleRepository.java  TagRepository.java  (+3 more)
src/main/resources/: ValidationMessages.properties  application.properties
src/main/resources/db/migration/: V1__init.sql  V2__seed_roles.sql  V3__soft_delete_audit_answers_comments.sql
src/test/java/dev/horobets/stackoverflow/: StackoverflowApplicationTests.java
src/test/resources/: application-test.properties
stackoverflow/: Makefile
stackoverflow/questions/: admin.py  api.py  models.py  permissions.py  serializers.py  urls.py
stackoverflow/questions/migrations/: 0001_initial.py  0002_auto_20200604_2010.py  0003_auto_20200607_1708.py
stackoverflow/stackoverflow/: settings.py  urls.py
stackoverflow/users/: models.py  urls.py
stackoverflow/users/migrations/: 0001_initial.py  0002_auto_20200604_1940.py
(+71 files in other folders)
